Separate CSS and start settings page

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,663 +1,16 @@
-/*
- * Base structure
- */
-@import url('http://fonts.googleapis.com/css?family=Roboto');
+@import 'base/normalize';
+@import 'base/variables';
 
-// @import url('http://fonts.googleapis.com/css?family=Lato+Light');
-$primary-background-color: #EEEEEE;
-$secondary-background-color: #E8E8E8;
-$background-color-3: #DDD;
-$inverse-background-color: #fff;
-$primary-font-color: #000;
-$hyperlink-font-color: #fff;
-$primary-border-color: #CFD8DC;
-$secondary-border-color: #dfe0e0;
-$primary-font: "Roboto";
+@import 'components/button';
+@import 'components/form';
+@import 'components/image';
+@import 'components/modal';
+@import 'components/navbar';
+@import 'components/panel';
+@import 'components/sidebar';
+@import 'components/table';
 
-//Navigation Colours
-$navbar-color: #01579B;
-$side-nav-color: #CFD8DC;
+@import 'utils/mixins';
 
-//Button Colours
-$btn-default-color: #01579B;
-$btn-default-hover-color: #0D47A1;
-$btn-highlight-color: #90A4AE;
-$btn-highlight-hover-color: #78909C;
-$btn-danger-color: #DD2C00;
-$btn-danger-hover-color: #B71C1C;
-$btn-success-color: #43A047;
-$btn-success-hover-color: #1B5E20;
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-  -moz-border-radius: $radius;
-  -ms-border-radius: $radius;
-  border-radius: $radius;
-}
-
-/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  padding-top: 50px;
-  background-color: $primary-background-color;
-  font-family: $primary-font;
-  color: $primary-font-color;
-  margin-left: 10px;
-}
-canvas, vis-network-track {
-  outline:0;
-}
-.panel {
-  max-width: 92%;
-  height: 100%;
-  border-color: $primary-border-color;
-  background-color: $secondary-background-color;
-  .panel-body {
-    padding: none;
-    margin-left: 0;
-    background-color: $secondary-background-color;
-    border-color: $primary-border-color;
-    border-radius: 3px;
-    .btn {
-      background-image: linear-gradient(#fcfcfc, #eee);
-      border: 1px solid #d5d5d5;
-      border-radius: 2px;
-      &:active {
-        background-image: linear-gradient(#eee, #fcfcfc);
-        outline: none;
-      }
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-}
-.panel-scroll {
-  @extend .panel-body;
-  height: 500px;
-  overflow-y: scroll;
-}
-.modal-body {
-  padding-left: 35px;
-  padding-right: 35px;
-}
-
-.modal-order-body {
-  padding-top:20px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-/*
- * Global add-ons
- */
-.vis-network {
-  background-color: $secondary-background-color;
-  width: 100%;
-  height: 100%;
-  color: #000;
-}
-.vis-network .item {
-  background-color: #000;
-  border-color: #000;
-  color: #ffffff;
-  font-family: 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
-  font-kerning: auto;
-  font-size: 13px;
-  font-style: normal;
-  font-variant: normal;
-  font-variant-ligatures: normal;
-  font-weight: normal;
-}
-.vis-network .item.green {
-  background-color: #000;
-  border-color: #000;
-  color: #ffffff;
-}
-.vis-network .item.red {
-  background-color: red;
-  border-color: red;
-  color: #ffffff;
-}
-.vis-network .item.orange {
-  background-color: orange;
-  border-color: orange;
-}
-.vis-network .item.magenta {
-  background-color: magenta;
-  border-color: magenta;
-  color: #ffffff;
-}
-.vis-network .item.past {
-  filter:alpha(opacity=50);
-  opacity: 0.5;
-}
-.sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
-}
-
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
-.navbar-fixed-top {
-  border: 0;
-  background-color: $navbar-color;
-  color: $primary-font-color;
-}
-.navbar-header .navbar-brand {
-  margin: 10px;
-  color: #fff;
-  letter-spacing: 0.1em;
-  font-size: 20px;
-  img {
-    display: inline-block;
-    margin-top: -5px;
-    margin-left: 30px;
-  }
-  @media screen and (max-width: 768px) {
-    img {
-      margin-left: 0;
-    }
-  }
-}
-.navbar-header img:hover,
-.navbar-header img:active,
-.navbar-header img:focus,
-.navbar-header a:hover {
-  -webkit-filter: invert(35%);
-}
-.navbar-collapse .nav li {
-  margin: 10px 5px;
-  @include border-radius(2px);
-  &:hover {
-    background-color: $btn-default-hover-color;
-  }
-  a {
-    color: #fff;
-  }
-}
-.navbar-right {
-  margin-right: 30px;
-}
-.navbar-toggle {
-  border: none;
-  margin-top: 16px;
-}
-.navbar-inverse .navbar-toggle:focus,
-.navbar-inverse .navbar-toggle:hover {
-  background-color: $btn-default-color;
-}
-@media screen and (max-width: 768px) {
-  .hide {
-    display: block!important;
-    visibility: visible;
-    display: none;
-  }
-  a.hide {
-    width: 10px;
-  }
-}
-iframe,
-iframe:active,
-iframe:focus,
-iframe:hover {
-  max-width: 100%;
-}
-
-
-/*
- * Sidebar
- */
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    // padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    /* Scrollable contents if viewport is shorter than content. */
-    background-color: $side-nav-color;
-    border-right: 1px solid #eee;
-  }
-}
-/* Sidebar navigation */
-.nav-sidebar {
-  li {
-    h1 {
-      font-size: 18px;
-      font-weight: 700;
-      letter-spacing: 1px;
-      margin-top: 38px;
-    }
-    .sidebar-border {
-      padding-left: 10px;
-      padding-right: 10px;
-      border-bottom: 0.132em solid $secondary-background-color;
-
-    }
-    a {
-      color: $primary-font-color;
-      font-size: 15px;
-      margin-right: -35px;
-      margin-left: -35px;
-      padding-left: 50px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      border-bottom: 0.132em solid $secondary-background-color;
-      &:hover {
-        background-color: $secondary-background-color;
-        @include border-radius(2px);
-      }
-      &:active {
-        background-color: $btn-highlight-color;
-        color: white;
-        font-weight: 100;
-
-      }
-    }
-    a.activeTab {
-      background-color: $btn-highlight-color;
-      @include border-radius(2px);
-      color: #fff;
-      font-weight:100;
-
-    }
-    padding-right: 15px;
-    padding-left: 15px;
-    // margin: 10px 5px;
-  }
-
-}
-.nav>li>a:focus,
-.nav>li>a:active {
-  text-decoration: none;
-  @include border-radius(2px);
-  background-color: $btn-highlight-color;
-  color: #fff;
-  font-weight:100;
-
-}
-/*
- * Main content
- */
-.main {
-  padding: 20px;
-  max-width: 100%;
-}
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-    max-width: 100%;
-  }
-}
-.main .page-header {
-  margin-top: 25px;
-  margin-left: 20px;
-  font-weight: 100;
-  max-width: 88%;
-  border-bottom: 2px solid $primary-border-color;
-}
-.btn-status-default {
-  @include border-radius(2px);
-  color: $secondary-background-color;
-  border-style: none;
-  background-color: $btn-default-color;
-  border-color: $btn-default-color;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 2px 2px 4px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  outline: none;
-}
-.btn-status-default:hover,
-.btn-status-default:focus,
-.btn-status-default.focus,
-.btn-status-default:active,
-.btn-status-default.active,
-.open > .dropdown-toggle.btn-status-default {
-  color: $secondary-background-color;
-  background-color: $btn-default-hover-color;
-  border-color: $btn-default-hover-color;
-  outline: none;
-}
-.btn-status-default:active,
-.btn-status-default.active,
-.open > .dropdown-toggle.btn-status-default {
-  background-image: none;
-}
-.btn-status-default.disabled,
-.btn-status-default[disabled],
-fieldset[disabled] .btn-status-default,
-.btn-status-default.disabled:hover,
-.btn-status-default[disabled]:hover,
-fieldset[disabled] .btn-status-default:hover,
-.btn-status-default.disabled:focus,
-.btn-status-default[disabled]:focus,
-fieldset[disabled] .btn-status-default:focus,
-.btn-status-default.disabled.focus,
-.btn-status-default[disabled].focus,
-fieldset[disabled] .btn-status-default.focus,
-.btn-status-default.disabled:active,
-.btn-status-default[disabled]:active,
-fieldset[disabled] .btn-status-default:active,
-.btn-status-default.disabled.active,
-.btn-status-default[disabled].active,
-fieldset[disabled] .btn-status-default.active {
-  color: #fff;
-  background-color: $btn-default-color;
-  @include border-radius(2px);
-  opacity: 0.5;
-  outline: none;
-}
-
-a.btn-status-default:hover,
-a.btn-status-default:active,
-a.btn-status-default:focus {
-  text-decoration: none;
-}
-.btn-status-danger {
-  @include border-radius(2px);
-  color: $secondary-background-color;
-  border-style: none;
-  background-color: $btn-danger-color;
-  border-color: $btn-danger-color;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 2px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  outline: none;
-}
-.btn-status-danger:hover,
-.btn-status-danger:focus,
-.btn-status-danger.focus,
-.btn-status-danger:active,
-.btn-status-danger.active,
-.open > .dropdown-toggle.btn-status-danger {
-  @include border-radius(2px);
-  color: $secondary-background-color;
-  background-color: $btn-danger-hover-color;
-  border-color: $btn-danger-hover-color;
-  outline: none;
-}
-.btn-status-danger.disabled,
-.btn-status-danger[disabled],
-fieldset[disabled] .btn-status-danger,
-.btn-status-danger.disabled:hover,
-.btn-status-danger[disabled]:hover,
-fieldset[disabled] .btn-status-danger:hover,
-.btn-status-danger.disabled:focus,
-.btn-status-danger[disabled]:focus,
-fieldset[disabled] .btn-status-danger:focus,
-.btn-status-danger.disabled.focus,
-.btn-status-danger[disabled].focus,
-fieldset[disabled] .btn-status-danger.focus,
-.btn-status-danger.disabled:active,
-.btn-status-danger[disabled]:active,
-fieldset[disabled] .btn-status-danger:active,
-.btn-status-danger.disabled.active,
-.btn-status-danger[disabled].active,
-fieldset[disabled] .btn-status-danger.active {
-  @include border-radius(2px);
-  color: $secondary-background-color;
-  background-color: $btn-danger-color;
-  border-color: $btn-danger-color;
-  opacity: 0.3;
-  outline: none;
-}
-.btn-status-success {
-  @include border-radius(2px);
-  color: $secondary-background-color;
-  border-style: none;
-  background-color: $btn-success-color;
-  border-color: $btn-success-color;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 2px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  outline: none;
-}
-.btn-status-success:hover,
-.btn-status-success:focus,
-.btn-status-success.focus,
-.btn-status-success:active,
-.btn-status-success.active,
-.open > .dropdown-toggle.btn-status-success {
-  @include border-radius(2px);
-  color: $secondary-background-color;
-  background-color: $btn-success-hover-color;
-  border-color: $btn-success-hover-color;
-  outline: none;
-}
-.btn-status-success.disabled,
-.btn-status-success[disabled],
-fieldset[disabled] .btn-status-success,
-.btn-status-success.disabled:hover,
-.btn-status-success[disabled]:hover,
-fieldset[disabled] .btn-status-success:hover,
-.btn-status-success.disabled:focus,
-.btn-status-success[disabled]:focus,
-fieldset[disabled] .btn-status-success:focus,
-.btn-status-success.disabled.focus,
-.btn-status-success[disabled].focus,
-fieldset[disabled] .btn-status-success.focus,
-.btn-status-success.disabled:active,
-.btn-status-success[disabled]:active,
-fieldset[disabled] .btn-status-success:active,
-.btn-status-success.disabled.active,
-.btn-status-success[disabled].active,
-fieldset[disabled] .btn-status-success.active {
-  border-radius: 2px;
-  color: #fff;
-  background-color: $btn-success-color;
-  opacity: 0.6;
-  outline: none;
-}
-.btn-size-large {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 25px;
-  padding-right: 25px;
-}
-a.btn-size-large:hover,
-a.btn-size-large:active,
-a.btn-size-large:focus {
-  text-decoration: none;
-}
-.form-control {
-  border-radius: 2px;
-}
-input.form-control,
-select.form-control {
-  border-radius: 2px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 15px;
-  background-color: #fff;
-  border: 1px solid $secondary-border-color;
-  font-size: 14px;
-}
-input.form-control:focus,
-select.form-control:focus {
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 15px;
-  background-color: #fff;
-  border: 1px solid $secondary-border-color;
-  font-size: 14px;
-  box-shadow: none;
-}
-
-input.search-side-nav {
-  max-width: 350px;
-  border-radius: 2px;
-}
-.panel {
-  border-radius: 2px;
-  border: none;
-}
-.huge {
-  font-size: 30px;
-  font-weight: 400;
-  color: #000;
-}
-.panel-footer {
-  background-color: #EEEEEE;
-}
-hr {
-  border-width: 2px;
-}
-hr.short {
-  width: 90%;
-  border-width: 1px;
-  border-style: solid;
-  border-color: $side-nav-color;
-  opacity: 0.9;
-}
-hr.side-nav {
-  width: 200%;
-  border-width: 0.12em;
-  color: #454545;
-  margin-top: 0;
-  margin-bottom: 8px;
-}
-div.modal-text {
-  width: 80%;
-}
-.div-align-right {
-  float: right;
-}
-table {
-  border-collapse: separate;
-  border: 0.18em solid $secondary-border-color;
-  display: table;
-  border-collapse: separate;
-  border-spacing: 0;
-  border-radius: 2px;
-}
-table.tableWhite {
-  background-color: #f3f3f3;
-  border-radius: 2px;
-
-  th {
-    background-color: $primary-background-color;
-    vertical-align: middle;
-    border-radius: 0px;
-  }
-
-  td {
-    vertical-align: bottom;
-    background-color: #f3f3f3;
-  }
-}
-.table>tbody>tr>td,
-.table>tbody>tr>th,
-.table>tfoot>tr>td,
-.table>tfoot>tr>th,
-.table>thead>tr>td,
-.table>thead>tr>th {
-  vertical-align: middle;
-  text-align: center;
-}
-
-.panel>.table-responsive:last-child>.table:last-child, .panel>.table:last-child,
-.panel>.table-responsive:first-child>.table:first-child, .panel>.table:first-child {
-  border-radius: 5px;
-}
-
-
-@media screen and (max-width: 768px) {
-  .table>tbody>tr>td,
-  .table>tbody>tr>th,
-  .table>tfoot>tr>td,
-  .table>tfoot>tr>th,
-  .table>thead>tr>td,
-  .table>thead>tr>th {
-    vertical-align: middle;
-    text-align: right;
-   }
-  .table>tbody>tr>td,
-  .table>tbody>tr>th {
-    background-color: #fff;
-  }
-
-
-  .table-responsive {
-    border: hidden;
-  }
-  table {
-    border: 2px solid $secondary-background-color;
-  }
-
-  table thead {
-    display: none;
-  }
-  table tr {
-    margin-bottom: 10px;
-    display: block;
-  }
-  table td {
-    content: attr(data-label);
-    display: block;
-    font-size: 13px;
-  }
-  table td:before {
-    content: attr(data-label);
-    font-weight: bold;
-    vertical-align: middle;
-    float: left;
-  }
-  // table td:first-child {
-  //   border-top-left-radius: 0px;
-  //   border-top-right-radius: 0px;
-  // }
-  // table td:last-child {
-  //   border-bottom-left-radius: 0px;
-  //   border-bottom-right-radius: 0px;
-  // }
-}
-select {
-  padding: 6px 10px;
-  border: 1px solid #bfbfbf;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  border-radius: 2px;
-}
-/*
- * Placeholder dashboard ideas
- */
-.placeholders {
-  margin-bottom: 30px;
-  text-align: center;
-}
-.placeholders h4 {
-  margin-bottom: 0;
-}
-.placeholder {
-  margin-bottom: 20px;
-}
-.placeholder img {
-  display: inline-block;
-  border-radius: 50%;
-}
-
-/*
-* Help Page
-*/
-img.instructionImg {
-  max-width: 100%;
-  border-radius: 2px;
-}
+@import 'vendor/vis';
+@import 'hacks/shame';
