--- a/src/views/dashboard.settings.users.html
+++ b/src/views/dashboard.settings.users.html
@@ -6,8 +6,16 @@
         <div class="container">
           <div class="panel-container">
 
-            <div class="panel panel-body">
+            <div class="panel">
               <!--<div class="panel-scroll">-->
+              <!-- <div class="settings-header"> -->
+              <div class="panel-heading">Form Elements</div>
+                  <!-- <div class="header-inner">
+                      <h2>Account</h2>
+                      <p>Change your basic user settings</p>
+
+                  </div> -->
+              </div>
             </div>
           </div>
         </div>
