general settings done

--- a/src/css/base/_normalize.scss
+++ b/src/css/base/_normalize.scss
@@ -15,7 +15,7 @@ $side-nav-color: #CFD8DC;
 //Button Colours
 $btn-default-color: #01579B;
 $btn-default-hover-color: #0D47A1;
-$btn-highlight-color: #90A4AE;
+$btn-highlight-color: #01579B;
 $btn-highlight-hover-color: #78909C;
 $btn-danger-color: #DD2C00;
 $btn-danger-hover-color: #B71C1C;
