--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -298,14 +298,14 @@
         </fieldset>
         <fieldset class="form-group">
             <div class="col-lg-6">
-            <label>Date</label>
+            <label>Date Range - From:</label>
             <input class="form-control" type="date" ng-model="dateStart" placeholder="ex. 12:44 PM, 2016-01-14">
-            <small class="text-muted">Press the triangle for the date widget</small>
+            <small class="text-muted">Filter Range (Beginning Date)</small>
           </div>
           <div class="col-lg-6">
-            <label>Date</label>
+            <label>Date Range - To:</label>
             <input class="form-control" type="date" ng-model="dateEnd" placeholder="ex. 12:44 PM, 2016-01-14">
-            <small class="text-muted">Press the triangle for the date widget</small>
+            <small class="text-muted">Filter Range (End Date)</small>
           </div>
         </fieldset>
 
