--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -7,7 +7,7 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <!-- TODO - make it so that selectedSupplyChain does NOT have to be passed into the function. -->
-              <button ng-click="createNewSupplyChain()" class="btn-status-default">Create</button>
+              <button ng-click="createNewSupplyChain()" class="btn-status-success">Create</button>
               <button ng-click="editSupplyChain()" class="btn-status-default">Edit</button>
             </div>
           </div>
