--- a/src/views/dashboard.settings.general.html
+++ b/src/views/dashboard.settings.general.html
@@ -5,14 +5,95 @@
       <div class="col-lg-8">
         <div class="container">
           <div class="panel-container">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="panel-setting">
+                  <form>
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Username</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" ng-model="username" type="text" placeholder="ex. halfmoonfish" disabled></input>
+                              <small class="text-muted">Your username is for logging in and can't be changed.</small>
+                            </div>
+                          </div>
+                        </fieldset>
 
-            <div class="panel panel-body">
-              <!--<div class="panel-scroll">-->
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Password</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" ng-model="password" type="password">
+                              <small class="text-muted">Please enter your new password.</small>
+                            </div>
+                          </div>
+                        </fieldset>
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Account Email Address</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" ng-model="email" type="email" placeholder="joe@coastlinemarket.com"></input>
+                              <small class="text-muted">Please enter your desired email.</small>
+                            </div>
+                          </div>
+                        </fieldset>
+                      </div>
+
+                      <div class="col-lg-6">
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Business Address</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" ng-model="address" type="text" placeholder="80 Whycliff Road, Surrey, B.C, Canada"></input>
+                              <small class="text-muted">Please enter your new password.</small>
+                            </div>
+                          </div>
+                        </fieldset>
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Postal Code</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" ng-model="postalCode" type="text" maxlength="6" placeholder="V3N2W1"></input>
+                              <small class="text-muted">No Spaces Please.</small>
+                            </div>
+                          </div>
+                        </fieldset>
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Business Phone</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" maxlength="10" ng-model="phoneNum" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029"></input>
+                              <small class="text-muted">Please enter only numbers.</small>
+                            </div>
+                          </div>
+                        </fieldset>
+                      </div>
+                    </div>
+                    <div align="right" class="panel-setting">
+                    <button ng-click="viewBlocks()" class="btn-status-success">Save Changes</button>
+                    <button ng-click="viewBlocks()" class="btn-status-danger">Cancel</button>
+                  </div>
+                  </form>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <!--</div>-->
     </div>
   </div>
 </div>
