--- a/src/views/dashboard.settings.users.html
+++ b/src/views/dashboard.settings.users.html
@@ -7,9 +7,7 @@
           <div class="panel-container">
 
             <div class="panel">
-              <!--<div class="panel-scroll">-->
-              <!-- <div class="settings-header"> -->
-              <div class="panel-heading">Form Elements</div>
+              <div class="panel-heading">User Settings</div>
                   <!-- <div class="header-inner">
                       <h2>Account</h2>
                       <p>Change your basic user settings</p>
@@ -20,7 +18,6 @@
           </div>
         </div>
       </div>
-      <!--</div>-->
     </div>
   </div>
 </div>
