Rename supply chain

--- a/src/views/dashboard.settings.html
+++ b/src/views/dashboard.settings.html
@@ -6,6 +6,7 @@
         </h1></li>
         <li>&nbsp;</li>
         <li><a ng-class="{activeTab: state.includes('dashboard.settings.general')}" ui-sref=".general">General</a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.settings.fishery')}" ui-sref=".fishery">Fishery</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.settings.users')}" ui-sref=".users">Users</a></li>
     </ul>
 </div>
