--- a/src/views/dashboard.settings.users.html
+++ b/src/views/dashboard.settings.users.html
@@ -1,4 +1,4 @@
-<div ng-controller="OrderDisplayCtrl">
+<div ng-controller="UserSettingsCtrl">
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">User Settings</h2>
     <div class="row placeholders">
