--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -9,6 +9,7 @@
               <!-- TODO - make it so that selectedSupplyChain does NOT have to be passed into the function. -->
               <button ng-click="createNewSupplyChain()" class="btn-status-success">Create</button>
               <button ng-click="editSupplyChain()" class="btn-status-default">Edit</button>
+              <button ng-click="renameSupplyChain()" class="btn-status-default">Rename</button>
             </div>
           </div>
         </div>
@@ -46,3 +47,24 @@
     </div>
   </div>
 </div>
+
+
+<!-- EDIT SUPPLY CHAIN STAGE MODAL -->
+<script type="text/ng-template" id="renameSupplyChain.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Edit Supply Chain Name</h3>
+  </div>
+  <div class="modal-body">
+    <form>
+      <fieldset class="form-group">
+        <label>New Name</label>
+        <input class="form-control" ng-model="supplyChain.name" maxlength="25" placeholder="i.e. Supply Chain 1">
+        <small class="text-muted">Maximum 30 characters.</small>
+      </fieldset>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-status-success" type="button" ng-click="ok()">Submit</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+</script>
