--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -1,6 +1,6 @@
-<div ng-controller="GeneralSettingsCtrl">
+<div ng-controller="FisherySettingsCtrl">
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">General Settings</h2>
+    <h2 class="page-header light-text">Fishery Settings</h2>
     <div class="row placeholders">
       <div class="col-lg-8">
         <div class="container">
@@ -17,21 +17,31 @@
                               <label>Username</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-model="username" type="text" disabled></input>
+                              <input class="form-control" ng-model="username" type="text" placeholder="ex. halfmoonfish" disabled></input>
                               <small class="text-muted">Your username is for logging in and can't be changed.</small>
                             </div>
                           </div>
                         </fieldset>
 
-
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Password</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" ng-model="password" type="password">
+                              <small class="text-muted">Please enter your new password.</small>
+                            </div>
+                          </div>
+                        </fieldset>
                         <fieldset class="form-group">
                           <div class="row">
                             <div class="col-lg-3">
                               <label>Account Email Address</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-model="email" type="email" placeholder="No email registered." disabled></input>
-                              <small class="text-muted">For security reasons, please contact us to change your email.</small>
+                              <input class="form-control" ng-model="email" type="email" placeholder="joe@coastlinemarket.com"></input>
+                              <small class="text-muted">Please enter your desired email.</small>
                             </div>
                           </div>
                         </fieldset>
@@ -41,22 +51,32 @@
                         <fieldset class="form-group">
                           <div class="row">
                             <div class="col-lg-3">
-                              <label>Full Name</label>
+                              <label>Business Address</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-model="name" type="text" placeholder="No name registered." ng-disabled="isSaving"></input>
+                              <input class="form-control" ng-model="address" type="text" placeholder="80 Whycliff Road, Surrey, B.C, Canada"></input>
                               <small class="text-muted">Please enter your new password.</small>
                             </div>
                           </div>
                         </fieldset>
-
                         <fieldset class="form-group">
                           <div class="row">
                             <div class="col-lg-3">
-                              <label>Phone Number</label>
+                              <label>Postal Code</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="No phone number registered." ng-disabled="isSaving"></input>
+                              <input class="form-control" ng-model="postalCode" type="text" maxlength="6" placeholder="V3N2W1"></input>
+                              <small class="text-muted">No Spaces Please.</small>
+                            </div>
+                          </div>
+                        </fieldset>
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Business Phone</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" maxlength="10" ng-model="phoneNum" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029"></input>
                               <small class="text-muted">Please enter only numbers.</small>
                             </div>
                           </div>
@@ -64,7 +84,7 @@
                       </div>
                     </div>
                     <div align="right" class="panel-setting">
-                    <button ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
+                    <button ng-click="viewBlocks()" class="btn-status-success">Save Changes</button>
                   </div>
                   </form>
                 </div>
