--- a/src/views/dashboard.default.html
+++ b/src/views/dashboard.default.html
@@ -4,7 +4,7 @@
           <!--<input class="form-control search-side-nav" type="text" maxlength="15"  placeholder="Search"></input>-->
           Navigation
         </h1></li>
-        <!--<li><a ng-class="{activeTab: state.includes('dashboard.default.overview')}" ui-sref=".overview">Overview</a></li>-->
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.overview')}" ui-sref=".overview">Overview</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.default.products')}" ui-sref=".products">Products</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.default.supply-chain')}" ui-sref=".supply-chain.menu">Supply Chain</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.default.inventory')}" ui-sref=".inventory.menu">Inventory</a></li>
