--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -1,4 +1,4 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-2 main">
+<div ng-controller="OverviewCtrl" class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-2 main">
   <h2 class="page-header light-text">Home</h2>
   <div class="row placeholders">
     <div class="col-lg-8">
@@ -10,7 +10,7 @@
               </div>
               <!--<div class="panel-scroll">-->
               <div class="col-lg-6">
-                <h3>Outstanding Payments Due in Two Weeks</h3>
+                <h3>Overdue payments</h3>
                 <hr class="short">
                 <div class="table-responsive">
                   <table class="table tableWhite">
@@ -22,12 +22,12 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>1,010</td>
-                        <td>Subscription Pickup</td>
+                      <tr ng-repeat="order in overdueOrders">
+                        <td>{{order.invoiceNumber}}</td>
+                        <td>{{order.paymentMethod}}</td>
                         <td>
                           <div class="alignright">
-                            <button ng-click="viewOrderDetail(order)" class="btn-status-default">View Details</button>
+                            <button class="btn-status-default">View Details</button>
                           </div>
                         </td>
                       </tr>
@@ -36,7 +36,7 @@
                 </div>
               </div>
               <div class="col-lg-6">
-                <h3>Payments Due in Two Weeks</h3>
+                <h3>Payments Due in One Week</h3>
                 <hr class="short">
                 <div class="table-responsive">
                   <table class="table tableWhite">
@@ -48,12 +48,12 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>1,010</td>
-                        <td>Subscription Pickup</td>
+                      <tr ng-repeat="order in upcomingOrders">
+                        <td>{{order.invoiceNumber}}</td>
+                        <td>{{order.paymentMethod}}</td>
                         <td>
                           <div class="alignright">
-                            <button ng-click="viewOrderDetail(order)" class="btn-status-default">View Details</button>
+                            <button class="btn-status-default">View Details</button>
                           </div>
                         </td>
                       </tr>
