--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -14,11 +14,11 @@
                         <fieldset class="form-group">
                           <div class="row">
                             <div class="col-lg-3">
-                              <label>Username</label>
+                              <label>Name</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-model="username" type="text" placeholder="ex. halfmoonfish" disabled></input>
-                              <small class="text-muted">Your username is for logging in and can't be changed.</small>
+                              <input class="form-control" ng-model="name" type="text"></input>
+                              <small class="text-muted">Change the name of your fishery.</small>
                             </div>
                           </div>
                         </fieldset>
@@ -26,22 +26,35 @@
                         <fieldset class="form-group">
                           <div class="row">
                             <div class="col-lg-3">
-                              <label>Password</label>
+                              <label>City/Town</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-model="password" type="password">
-                              <small class="text-muted">Please enter your new password.</small>
+                              <input class="form-control" ng-model="city" type="text" placeholder="New York"></input>
+                              <small class="text-muted">Change the city/town of your fishery.</small>
                             </div>
                           </div>
                         </fieldset>
+
                         <fieldset class="form-group">
                           <div class="row">
                             <div class="col-lg-3">
-                              <label>Account Email Address</label>
+                              <label>Main Phone</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-model="email" type="email" placeholder="joe@coastlinemarket.com"></input>
-                              <small class="text-muted">Please enter your desired email.</small>
+                              <input class="form-control" ng-model="phone" placeholder="555-555-5555" type="text"></input>
+                              <small class="text-muted">Change the main phone number of your fishery.</small>
+                            </div>
+                          </div>
+                        </fieldset>
+
+                        <fieldset class="form-group">
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <label>Fax</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" ng-model="faxPhone" placeholder="555-555-5555" type="text"></input>
+                              <small class="text-muted">Change the fax number of your fishery.</small>
                             </div>
                           </div>
                         </fieldset>
@@ -54,37 +67,39 @@
                               <label>Business Address</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-model="address" type="text" placeholder="80 Whycliff Road, Surrey, B.C, Canada"></input>
-                              <small class="text-muted">Please enter your new password.</small>
+                              <input class="form-control" ng-model="address" type="text" placeholder="80 Whycliff Road"></input>
+                              <small class="text-muted">Change the address of your fishery.</small>
                             </div>
                           </div>
                         </fieldset>
+
                         <fieldset class="form-group">
                           <div class="row">
                             <div class="col-lg-3">
-                              <label>Postal Code</label>
+                              <label>Postal/Zip Code</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-model="postalCode" type="text" maxlength="6" placeholder="V3N2W1"></input>
-                              <small class="text-muted">No Spaces Please.</small>
+                              <input class="form-control" ng-model="postalCode" type="text" placeholder="i.e. N6G 1N1 or 48120"></input>
+                              <small class="text-muted">Change the postal/zip code of your fishery.</small>
                             </div>
                           </div>
                         </fieldset>
+
                         <fieldset class="form-group">
                           <div class="row">
                             <div class="col-lg-3">
-                              <label>Business Phone</label>
+                              <label>Sales Phone</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" maxlength="10" ng-model="phoneNum" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029"></input>
-                              <small class="text-muted">Please enter only numbers.</small>
+                              <input class="form-control" ng-model="salesPhone" placeholder="555-555-5555" type="text"></input>
+                              <small class="text-muted">Change the sales phone number of your fishery.</small>
                             </div>
                           </div>
                         </fieldset>
                       </div>
                     </div>
                     <div align="right" class="panel-setting">
-                    <button ng-click="viewBlocks()" class="btn-status-success">Save Changes</button>
+                    <button ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
                   </div>
                   </form>
                 </div>
