--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -27,7 +27,7 @@
                         <td>{{order.paymentMethod}}</td>
                         <td>
                           <div class="alignright">
-                            <button class="btn-status-default">View Details</button>
+                            <button ng-click="viewOrderDetail(order)" class="btn-status-default">View Details</button>
                           </div>
                         </td>
                       </tr>
@@ -53,7 +53,7 @@
                         <td>{{order.paymentMethod}}</td>
                         <td>
                           <div class="alignright">
-                            <button class="btn-status-default">View Details</button>
+                            <button ng-click="viewOrderDetail(order)" class="btn-status-default">View Details</button>
                           </div>
                         </td>
                       </tr>
@@ -68,3 +68,58 @@
     </div>
   </div>
 </div>
+
+<!-- VIEW ORDER DETAIL MODAL-->
+<script type="text/ng-template" id="viewOrderDetailModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}</h3>
+  </div>
+  <div class="modal-body">
+    <h4><b>Name :</b> {{order.customerName}}</h4>
+    <h4><b>Phone :</b> {{order.phone}}</h4>
+    <h4><b>Email :</b> {{order.email}}</h4>
+    <h4><b>Order Time :</b> {{order.date | date:'short' }}</h4>
+    <h4><b>Credit Terms :</b> {{order.creditTerms}}</h4>
+  </div>
+  <div class="modal-footer">
+    <!--<a class="btn-status-default" ng-href="{{ fileUrl }}" download="invoice.pdf"><i class="fa fa-file-pdf-o"></i>  Export to PDF</a>-->
+
+    <div ng-switch="pdfStatus">
+      <div ng-switch-default><a class="btn-status-default" href="javascript:void(0);" ng-click="getPDF()"><i class="fa fa-file-pdf-o"></i>  Export to PDF</a></div>
+      <div ng-switch-when="loading"><a class="btn-status-success" href="javascript:void(0);">Loading...</a></div>
+    </div>
+  </div>
+
+  <div class="modal-body">
+    <div class="table-responsive">
+      <table class="table tableWhite">
+        <thead>
+          <tr>
+            <th>Product</th>
+            <th>Unit Price</th>
+            <th>Quantity</th>
+            <th>Total Cost</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="item in order.items track by $index">
+            <td data-label="Product">{{item.product.name}}</td>
+            <td data-label="Unit Price">${{item.unitPrice}} / {{item.product.unit}}</td>
+            <td data-label="Quantity">{{item.quantity}} {{item.product.unit}}</td>
+            <td data-label="Subtotal">{{item.unitPrice * item.quantity}}</td>
+          </tr>
+          <tr>
+            <td><b>Total</b></td>
+            <td></td>
+            <td></td>
+            <td>${{getTotal()}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-status-success" type="button" ng-click="dismiss()">OK</button>
+  </div>
+</script>
