--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -5,7 +5,7 @@
       <div class="panel-container">
         <div class="panel panel-default">
           <div class="panel-body">
-            <div class="panel-heading">
+            <div class="panel-setting-heading">
               <h1>Coastline Quick Start Guide</h1>
               <br>
               <a class="btn-status-success btn-size-large" target="_self" href="http://www.coastlinemarket.com/img/coastline-guide.pdf" download="coastline-guide.pdf">PDF Guide Download</a>
