--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -312,7 +312,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button class="btn-status-success" type="button" ng-click="ok()">Filter</button>
+      <button ng-disabled="isFilterDisabled()" class="btn-status-success" type="button" ng-click="ok()">Filter</button>
       <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
 </script>
