login validation for no pw/id

--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -120,6 +120,6 @@
   </div>
   </div>
   <div class="modal-footer">
-    <button class="btn-status-success" type="button" ng-click="dismiss()">OK</button>
+    <button class="btn-status-default" type="button" ng-click="dismiss()">Close</button>
   </div>
 </script>
