--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.products">
+        <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.overview">
           <img src="../img/coastline-logo.png" alt="coastline  logo"> {{fisheryName}}
         </a>
       </div>
@@ -19,7 +19,7 @@
           <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
           <li class="hide"><a ui-sref=".default.sales-management.track">Sales</a></li>
           <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
-          <li><a ui-sref=".default.products">Home</a></li>
+          <li><a ui-sref=".default.overview">Home</a></li>
           <li><a ui-sref=".settings.general">Settings</a></li>
           <li><a ui-sref=".help">Help</a></li>
           <li><a ng-click="logout()" href="#">Logout</a></li>
