--- a/src/views/dashboard.settings.users.html
+++ b/src/views/dashboard.settings.users.html
@@ -8,10 +8,10 @@
             <div class="panel panel-default">
               <div class="panel-body alignleft">
                 <button ng-click="inviteUser()" class="btn-status-success">Invite New User</button>
-                <button ng-show="isFilterCleared" ng-click="addFilter()" class="btn-status-default">Filter User <i class="fa fa-filter"></i></button>
-                <button ng-show="!isFilterCleared" ng-click="clearFilter()" class="btn-status-default">Clear Filter <i class="fa fa-filter"></i></button>
-                <button ng-click="editUser(selectedUser)" class="btn-status-default">Manage User</button>
-                <button ng-click="deleteUser()" class="btn-status-danger">Delete User</button>
+                <!-- <button ng-show="isFilterCleared" ng-click="addFilter()" class="btn-status-default">Filter User <i class="fa fa-filter"></i></button> -->
+                <!-- <button ng-show="!isFilterCleared" ng-click="clearFilter()" class="btn-status-default">Clear Filter <i class="fa fa-filter"></i></button> -->
+                <!-- <button ng-click="editUser(selectedUser)" class="btn-status-default">Manage User</button> -->
+                <!-- <button ng-click="deleteUser()" class="btn-status-danger">Delete User</button> -->
               </div>
             </div>
             <div class="panel panel-body">
@@ -19,22 +19,24 @@
                 <table class="table tableWhite">
                   <thead>
                     <tr>
-                      <th>Select</th>
+                      <!-- <th>Select</th> -->
                       <th>User Name</th>
-                      <th>Employee Number</th>
-                      <th>User Type</th>
+                      <th>Account Type</th>
+                      <th>Email</th>
+                      <th>Name</th>
                       <th>Date Added</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr ng-repeat="order in orders track by $index">
-                      <td data-label="Select">
-                        <input type="radio" ng-model="$parent.selectedOrder" ng-value="$parent.orders[$index]">
-                      </td>
-                      <td data-label="Invoice">&nbsp; {{order.customerName}}</td>
-                      <td data-label="Name">3452123</td>
-                      <td data-label="Status">&nbsp;Admin</td>
-                      <td data-label="Status">&nbsp;{{order.date | date:'short'}}</td>
+                    <tr ng-repeat="user in users track by $index">
+                      <!-- <td data-label="Select">
+                        <input type="radio" ng-model="$parent.selectedUser" ng-value="$parent.users[$index]">
+                      </td> -->
+                      <td data-label="Invoice">&nbsp; {{user.username}}</td>
+                      <td data-label="Name">&nbsp; {{user.accountType}}</td>
+                      <td data-label="Status">&nbsp;{{user.email}}</td>
+                      <td data-label="Status">&nbsp;{{user.name}}</td>
+                      <td data-label="Status">&nbsp;{{user.dateCreated | date: 'short'}}</td>
                     </tr>
                   </tbody>
                 </table>
@@ -46,3 +48,30 @@
     </div>
   </div>
 </div>
+
+<script type="text/ng-template" id="inviteUser.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Add user to fishery</h3>
+  </div>
+  <div class="modal-body">
+    <form>
+      <fieldset class="form-group">
+        <label>Email Address</label>
+        <input class="form-control" ng-model="email" maxlength="25" placeholder="i.e. coastline@fish.com">
+      </fieldset>
+      <fieldset class="form-group">
+          <label>Account Type</label>
+          <select name="mydropdown" class="form-control" ng-model="accountType">
+            <option value="admin">admin</option>
+            <option value="staff">staff</option>
+          </select>
+          <small class="text-muted">Please choose between the two options.</small>
+    </fieldset>
+
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-status-success" type="button" ng-click="ok()">Submit</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+</script>
