colour scheme changes

--- a/src/css/base/_normalize.scss
+++ b/src/css/base/_normalize.scss
@@ -9,17 +9,17 @@ $secondary-border-color: #dfe0e0;
 $primary-font: "Roboto";
 
 //Navigation Colours
-$navbar-color: #01579B;
+$navbar-color: #263238;
 $side-nav-color: #CFD8DC;
 
 //Button Colours
-$btn-default-color: #01579B;
-$btn-default-hover-color: #0D47A1;
-$btn-highlight-color: #01579B;
+$btn-default-color: #546E7A;
+$btn-default-hover-color: #455A64;
+$btn-highlight-color: #607D8B;
 $btn-highlight-hover-color: #78909C;
-$btn-danger-color: #DD2C00;
+$btn-danger-color: #D50000;
 $btn-danger-hover-color: #B71C1C;
-$btn-success-color: #43A047;
+$btn-success-color: #388E3C;
 $btn-success-hover-color: #1B5E20;
 
 
