--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -17,7 +17,7 @@
                               <label>Name</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="name" type="text"></input>
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="name" type="text"></input>
                               <small class="text-muted">Change the name of your fishery.</small>
                             </div>
                           </div>
@@ -29,7 +29,7 @@
                               <label>City/Town</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="city" type="text" placeholder="New York"></input>
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="city" type="text" placeholder="New York"></input>
                               <small class="text-muted">Change the city/town of your fishery.</small>
                             </div>
                           </div>
@@ -41,7 +41,7 @@
                               <label>Main Phone</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="phone" placeholder="555-555-5555" type="text"></input>
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="phone" placeholder="555-555-5555" type="text"></input>
                               <small class="text-muted">Change the main phone number of your fishery.</small>
                             </div>
                           </div>
@@ -53,7 +53,7 @@
                               <label>Fax</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="faxPhone" placeholder="555-555-5555" type="text"></input>
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="faxPhone" placeholder="555-555-5555" type="text"></input>
                               <small class="text-muted">Change the fax number of your fishery.</small>
                             </div>
                           </div>
@@ -67,7 +67,7 @@
                               <label>Business Address</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="address" type="text" placeholder="80 Whycliff Road"></input>
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="address" type="text" placeholder="80 Whycliff Road"></input>
                               <small class="text-muted">Change the address of your fishery.</small>
                             </div>
                           </div>
@@ -79,7 +79,7 @@
                               <label>State/Province</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="state" type="text" placeholder="i.e. Maine"></input>
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="state" type="text" placeholder="i.e. Maine"></input>
                               <small class="text-muted">Change the state/province of your fishery.</small>
                             </div>
                           </div>
@@ -91,7 +91,7 @@
                               <label>Postal/Zip Code</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="postalCode" type="text" placeholder="i.e. N6G 1N1 or 48120"></input>
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="postalCode" type="text" placeholder="i.e. N6G 1N1 or 48120"></input>
                               <small class="text-muted">Change the postal/zip code of your fishery.</small>
                             </div>
                           </div>
@@ -103,7 +103,7 @@
                               <label>Sales Phone</label>
                             </div>
                             <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="salesPhone" placeholder="555-555-5555" type="text"></input>
+                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="salesPhone" placeholder="555-555-5555" type="text"></input>
                               <small class="text-muted">Change the sales phone number of your fishery.</small>
                             </div>
                           </div>
@@ -111,7 +111,7 @@
                       </div>
                     </div>
                     <div align="right" class="panel-setting">
-                    <button ng-disabled="isSubmitButtonDisabled()" ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
+                    <button ng-disabled="isSubmitButtonDisabled() || isDisabled" ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
                   </div>
                   </form>
                 </div>
