Add batch number

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -41,8 +41,8 @@
             <thead>
               <tr>
                 <th>Select</th>
+                <th>Batch #</th>
                 <th>Product Type</th>
-                <th>Job #</th>
                 <th>Quantity</th>
                 <th>Inventory Input Date</th>
               </tr>
@@ -52,8 +52,8 @@
                 <td data-label="Select">
                   <input type="radio" ng-model="$parent.selectedBlock" ng-value="$parent.blocks[$index]">
                 </td>
+                <td data-label="Job #">&nbsp;{{block.blockNumber}}</td>
                 <td data-label="Product">{{block.productType.name}}</td>
-                <td data-label="Job #">&nbsp;{{block.jobNumber}}</td>
                 <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
                 <td data-label="Add Date">{{block.dateCreated | date: 'short'}}</td>
 
@@ -126,6 +126,13 @@
           <label>Water Depth (Meters)</label>
           <input class="form-control" ng-model="waterDepth" type="number" step="1" placeholder="ex. 500">
           <small class="text-muted">Enter the water depth in meters.</small>
+        </div>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Batch Number</label>
+          <input class="form-control" ng-model="blockNumber" type="text" step="1" placeholder="ex. A5432">
+          <small class="text-muted">[Optional] For custom batch numbers.</small>
         </div>
       </fieldset>
       <!--<fieldset class="form-group">
