minor safari browser fixes

--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -299,12 +299,12 @@
         <fieldset class="form-group">
             <div class="col-lg-6">
             <label>Date Range - From:</label>
-            <input class="form-control" type="date" ng-model="dateStart" placeholder="ex. 12:44 PM, 2016-01-14">
+            <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
             <small class="text-muted">Filter Range (Beginning Date)</small>
           </div>
           <div class="col-lg-6">
             <label>Date Range - To:</label>
-            <input class="form-control" type="date" ng-model="dateEnd" placeholder="ex. 12:44 PM, 2016-01-14">
+            <input class="form-control" type="date" ng-model="dateEnd" placeholder="2016-01-14">
             <small class="text-muted">Filter Range (End Date)</small>
           </div>
         </fieldset>
