img links changed

--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -8,7 +8,7 @@
             <div class="panel-setting-heading">
               <h1>Coastline Quick Start Guide</h1>
               <br>
-              <a class="btn-status-success btn-size-large" target="_self" href="http://www.coastlinemarket.com/img/coastline-guide.pdf" download="coastline-guide.pdf">PDF Guide Download</a>
+              <a class="btn-status-success btn-size-large" target="_self" href="https://s3.amazonaws.com/coastline-us/coastline-guide.pdf" download="coastline-guide.pdf">PDF Guide Download</a>
               <br><br>
               <hr class="short">
             </div>
@@ -35,7 +35,7 @@
                 <h4>6. Click <i>Save</i></h4>
               </div>
               <div class="col-lg-6">
-                <img class="instructionImg" src="../img/supply-chain.png"></img>
+                <img class="instructionImg" src="https://s3.amazonaws.com/coastline-us/supply-chain.png"></img>
               </div>
             </div>
             <hr class="short">
@@ -49,7 +49,7 @@
                 <h4>3. Fill out the required info and click <i>Submit</i></h4>
               </div>
               <div class="col-lg-6">
-                <img class="instructionImg" src="../img/add-product.png"></img>
+                <img class="instructionImg" src="https://s3.amazonaws.com/coastline-us/add-product.png"></img>
               </div>
             </div>
             <hr class="short">
@@ -66,7 +66,7 @@
                 <h4>6. Fill out the information and click <i>OK</i></h4>
               </div>
               <div class="col-lg-6">
-                <img class="instructionImg" src="../img/add-batch.png"></img>
+                <img class="instructionImg" src="https://s3.amazonaws.com/coastline-us/add-batch.png"></img>
               </div>
             </div>
             <hr class="short">
@@ -85,7 +85,7 @@
                   <h4>5. Click the <i>OK</i> button</h4>
               </div>
               <div class="col-lg-6">
-                <img class="instructionImg" src="../img/inventory.png"></img>
+                <img class="instructionImg" src="https://s3.amazonaws.com/coastline-us/inventory.png"></img>
               </div>
             </div>
             <hr class="short">
@@ -101,7 +101,7 @@
                 <h4>5. Click the <i>OK</i> button</h4>
               </div>
               <div class="col-lg-6">
-                <img class="instructionImg" src="../img/sell-point.png"></img>
+                <img class="instructionImg" src="https://s3.amazonaws.com/coastline-us/sell-point.png"></img>
               </div>
             </div>
             <hr class="short">
@@ -118,7 +118,7 @@
                 <h4>7. The new window will display the historical data of the fish, along with its catcher and origin</h4>
               </div>
               <div class="col-lg-6">
-                <img class="instructionImg" src="../img/trace.png"></img>
+                <img class="instructionImg" src="https://s3.amazonaws.com/coastline-us/trace.png"></img>
               </div>
             </div>
             <hr class="short">
@@ -138,7 +138,7 @@
                 <h4>4. Click <i>Export to PDF or Export to Excel</i> to download the invoice to your computer</h4>
               </div>
               <div class="col-lg-6">
-                <img class="instructionImg" src="../img/export-pdf.png"></img>
+                <img class="instructionImg" src="https://s3.amazonaws.com/coastline-us/export-pdf.png"></img>
               </div>
             </div>
             <hr class="short">
