--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.overview">
-          <img src="../img/coastline-logo.png" alt="coastline  logo"> {{fisheryName}}
+          <img src="https://s3.amazonaws.com/coastline-us/coastline-logo.png" alt="coastline  logo"> {{fisheryName}}
         </a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
