--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -17,7 +17,7 @@
                     <thead>
                       <tr>
                         <th>Invoice #</th>
-                        <th>Date (MM/DD/YYYY)</th>
+                        <th>Payment Method</th>
                         <th>View Details</th>
                       </tr>
                     </thead>
@@ -43,7 +43,7 @@
                     <thead>
                       <tr>
                         <th>Invoice #</th>
-                        <th>Date (MM/DD/YYYY)</th>
+                        <th>Payment Method</th>
                         <th>View Details</th>
                       </tr>
                     </thead>
