--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -1,334 +1,1 @@
-<div ng-controller="OrderDisplayCtrl">
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">Manage Orders</h2>
-    <div class="row placeholders">
-      <div class="col-lg-8">
-        <div class="container">
-          <div class="panel-container">
-            <div class="panel panel-default">
-              <div class="panel-body alignleft">
-                <button ng-click="addOrder()" class="btn-status-success">Add Invoice Order</button>
-                <button ng-click="deleteOrder()" class="btn-status-danger">Delete Order</button>
-                <button ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default">View Order Details</button>
-                <button ng-show="isFilterCleared" ng-click="addFilter()" class="btn-status-default">Filter/Search <i class="fa fa-filter"></i></button>
-                <button ng-show="!isFilterCleared" ng-click="clearFilter()" class="btn-status-default">Clear Filter <i class="fa fa-filter"></i></button>
-              </div>
-            </div>
-            <div class="panel panel-body">
-              <!--<div class="panel-scroll">-->
-              <div class="table-responsive">
-                <table class="table tableWhite">
-                  <thead>
-                    <tr>
-                      <th>Select</th>
-                      <th>Invoice #</th>
-                      <th>Customer Name</th>
-                      <th>Status</th>
-                      <th>Date and Time </th>
-                      <th>Total Amount</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr ng-repeat="order in orders track by $index">
-                      <td data-label="Select">
-                        <input type="radio" ng-model="$parent.selectedOrder" ng-value="$parent.orders[$index]">
-                      </td>
-                      <td data-label="Invoice">&nbsp; {{order.invoiceNumber}}</td>
-                      <td data-label="Name">{{order.customerName}}</td>
-                      <td data-label="Status">&nbsp;{{order.status}}</td>
-                      <td data-label="Date">{{order.date | date:'short' }}</td>
-                      <td data-label="Subtotal">${{totals[$index]}}</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--</div>-->
-    </div>
-  </div>
-</div>
-
-
-<!-- VIEW ORDER DETAIL MODAL-->
-<script type="text/ng-template" id="viewOrderDetailModal.html">
-  <div class="modal-header">
-    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}</h3>
-  </div>
-  <div class="modal-body">
-    <h4><b>Name :</b> {{order.customerName}}</h4>
-    <h4><b>Phone :</b> {{order.phone}}</h4>
-    <h4><b>Email :</b> {{order.email}}</h4>
-    <h4><b>Order Time :</b> {{order.date | date:'short' }}</h4>
-    <h4><b>Credit Terms :</b> {{order.creditTerms}}</h4>
-  </div>
-  <div class="modal-footer">
-    <!--<a class="btn-status-default" ng-href="{{ fileUrl }}" download="invoice.pdf"><i class="fa fa-file-pdf-o"></i>  Export to PDF</a>-->
-
-    <div ng-switch="pdfStatus">
-      <div ng-switch-default><a class="btn-status-default" href="javascript:void(0);" ng-click="getPDF()"><i class="fa fa-file-pdf-o"></i>  Export to PDF</a></div>
-      <div ng-switch-when="loading"><a class="btn-status-success" href="javascript:void(0);">Loading...</a></div>
-    </div>
-  </div>
-
-  <div class="modal-body">
-    <div class="table-responsive">
-      <table class="table tableWhite">
-        <thead>
-          <tr>
-            <th>Product</th>
-            <th>Unit Price</th>
-            <th>Quantity</th>
-            <th>Total Cost</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="item in order.items track by $index">
-            <td data-label="Product">{{item.product.name}}</td>
-            <td data-label="Unit Price">${{item.unitPrice}} / {{item.product.unit}}</td>
-            <td data-label="Quantity">{{item.quantity}} {{item.product.unit}}</td>
-            <td data-label="Subtotal">{{item.unitPrice * item.quantity}}</td>
-          </tr>
-          <tr>
-            <td><b>Total</b></td>
-            <td></td>
-            <td></td>
-            <td>${{getTotal()}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  </div>
-  <div class="modal-footer">
-    <button class="btn-status-success" type="button" ng-click="dismiss()">OK</button>
-  </div>
-</script>
-
-
-<!-- MANUAL ORDER INPUT MODAL-->
-<script type="text/ng-template" id="addOrderModal.html">
-  <div class="modal-header">
-    <h3 class="modal-title text-center">Add an Invoice</h3>
-  </div>
-  <div class="modal-body">
-    <form>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Customer Name</label>
-          <input class="form-control" type="text" maxlength="30" ng-model="customerName" placeholder="ex. John Doe">
-          <small class="text-muted">Maximum 30 characters</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Email</label>
-          <input class="form-control" ng-model="email" placeholder="ex. fish@coastline.com">
-          <small class="text-muted">Please enter a valid email</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-4">
-          <label>Invoice Number</label>
-          <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
-          <small class="text-muted">Maximum 10 characters</small>
-        </div>
-        <div class="col-lg-4">
-          <label>Payment Method</label>
-          <select ng-model="paymentMethod" class="form-control">
-            <option value="Cash">Cash</option>
-            <option value="Cheque">Cheque</option>
-            <option value="Credit">Credit</option>
-            <option value="Debit">Debit</option>
-          </select>
-          <small class="text-muted">Choose from the dropdown list</small>
-        </div>
-        <div class="col-lg-4">
-          <label>Status</label>
-          <select ng-model="status" class="form-control">
-            <option value="pending">Pending</option>
-            <option value="delivered">Delivered</option>
-            <option value="paid">Paid</option>
-            <option value="cancelled">Cancelled</option>
-            <option value="refunded">Refunded</option>
-          </select>
-          <small class="text-muted">Choose from the dropdown list</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-4">
-          <label>Date</label>
-          <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016-01-14">
-          <small class="text-muted">Press the triangle for the date widget</small>
-        </div>
-        <div class="col-lg-4">
-          <label>Credit Terms (in Days)</label>
-          <input class="form-control" type="number" min="0" max="99999" ng-model="creditTerms" placeholder="ex. 12">
-          <small class="text-muted">Enter the invoice terms</small>
-        </div>
-        <div class="col-lg-4">
-          <label>Phone Number</label>
-          <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029"></input>
-          <small class="text-muted">No spaces or dashes</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Order Currency</label>
-          <select ng-model="currency" class="form-control">
-            <option value="USD">USD</option>
-            <option value="CAD">CAD</option>
-            <option value="Euro">Euro</option>
-          </select>
-          <small class="text-muted">Choose the currency type.</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Tax Rate</label>
-          <input class="form-control" maxlength="10" min="0" ng-model="taxRate" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 13"></input>
-          <small class="text-muted">[Optional] Please enter the tax rate as a percentage.</small>
-        </div>
-      </fieldset>
-      <hr class="short">
-      <div class="table-responsive">
-        <table class="table tableWhite">
-          <thead>
-            <tr>
-              <th>Product</th>
-              <th>Batch (M/D/Y)</th>
-              <th>Unit Price</th>
-              <th>Units</th>
-              <th>Quantity (Max: {{selectedBlock.quantity + selectedBlock.units}})</th>
-              <th>&nbsp;</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="item in items track by $index">
-              <td data-label="Product">{{item.product.name}}</td>
-              <td data-label="Data">{{item.block.displayData || item.block.catchDate}}</td>
-              <td data-label="Unit Price $">{{item.unitPrice}}</td>
-              <td data-label="Units">{{item.units}}</td>
-              <td data-label="Quantity">{{item.quantity}}</td>
-            </tr>
-            <tr>
-              <td data-label="Product">
-                <select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
-              </td>
-
-              <td data-label="Choose Batch">
-                <select class="form-control" ng-model="selectedBlock" ng-options="block.displayData for block in blocks"></select>
-              </td>
-
-              <td data-label="Unit Price">
-                <input type="number" min="0" ng-model="unitPrice" step="0.01" class="form-control" placeholder="ex. 12.99"></input>
-              </td>
-
-              <td data-label="Units">
-                <select ng-model="units" class="form-control">
-                  <option value="lbs">lbs</option>
-                  <option value="half lbs">1/2 lbs</option>
-                  <option value="kg">kg</option>
-                </select>
-              </td>
-
-              <td data-label="Quantity">
-                <input type="number" min="0" ng-model="quantity" value="1" class="form-control" placeholder="ex. 10"></input>
-              </td>
-
-              <td data-label="Add Entry">
-                <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-status-success"><i class="fa fa-plus"></i></btn>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <h3 class="text-right">Total: ${{getTotal()}}</h3>
-      </div>
-    </form>
-  </div>
-  </form>
-  </div>
-  <div class="modal-footer">
-    <div class="alignright">
-      <button type="submit" ng-disabled="isSubmitButtonDisabled()" class="btn-status-success" ng-click="ok()">Submit</button>
-      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
-    </div>
-  </div>
-</script>
-
-<!-- FILTER ORDERS MODAL-->
-<script type="text/ng-template" id="views/modals/order-filter.html">
-    <div class="modal-header">
-      <h3 class="modal-title">Filter Order Criteria</h3>
-    </div>
-    <div class="modal-body">
-      <form>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Customer Name</label>
-            <input class="form-control" type="text" maxlength="30" ng-model="customerName" placeholder="ex. John Doe">
-            <small class="text-muted">[Optional] Maximum 30 characters</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Invoice Number</label>
-            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
-            <small class="text-muted">[Optional] Order Invoice </small>
-          </div>
-        </fieldset>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Payment Method</label>
-            <select ng-model="paymentMethod" class="form-control">
-              <option value="Cash">Cash</option>
-              <option value="Cheque">Cheque</option>
-              <option value="Credit">Credit</option>
-              <option value="Debit">Debit</option>
-            </select>
-            <small class="text-muted">Choose from the dropdown list</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Status</label>
-            <select ng-model="status" class="form-control">
-              <option value="pending">Pending</option>
-              <option value="delivered">Delivered</option>
-              <option value="paid">Paid</option>
-              <option value="cancelled">Cancelled</option>
-              <option value="refunded">Refunded</option>
-            </select>
-            <small class="text-muted">Choose from the dropdown list</small>
-          </div>
-        </fieldset>
-        <fieldset class="form-group">
-            <div class="col-lg-6">
-            <label>Date Range - From:</label>
-            <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
-            <small class="text-muted">Filter Range (Beginning Date)</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Date Range - To:</label>
-            <input class="form-control" type="date" ng-model="dateEnd" placeholder="2016-01-14">
-            <small class="text-muted">Filter Range (End Date)</small>
-          </div>
-        </fieldset>
-
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button ng-disabled="isFilterDisabled()" class="btn-status-success" type="button" ng-click="ok()">Filter</button>
-      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
-    </div>
-</script>
-
-<!-- DELETE ORDER MODAL-->
-<script type="text/ng-template" id="deleteOrderModal.html">
-  <div class="modal-header">
-    <h3 class="modal-title">Delete Product</h3>
-  </div>
-  <div class="modal-body">
-    <p>Are you sure you want to delete this order?
-      <br>
-      <br> Note that this will add back any inventory quantities from the batches corresponding to each item.</p>
-  </div>
-  <div class="modal-footer">
-    <button class="btn-status-success" type="button" ng-click="ok()">Yes</button>
-    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
-  </div>
-</script>
+<div ui-view></div>
